--- a/src/i18n/locales/pt/translation.json
+++ b/src/i18n/locales/pt/translation.json
@@ -57,6 +57,71 @@
         "eventName": "Nome do evento",
         "value": "Valor",
         "above": "acima",
-        "bellow": "abaixo"
+        "below": "abaixo"
+    },
+    "api": {
+        "readTheDoc": "Leia a documentação no Postman:",
+        "What is Split Master": "O que é o Split Master",
+        "As the name says, split them all": "Como o nome diz, divida todos eles",
+        "splitMasterDescription": "A Split Master Platform, tem a função principal, a divisão de bitcoin, mas também existem várias outras ferramentas além da divisão, como Timer, Event, Swap e Notify. Você pode escolher o que quiser e criar aplicativos incríveis usando o painel para criar visualmente ou o API Rest.",
+        "How to create a new scheme using the API": "Como criar um novo esquema usando a API",
+        "To create an scheme, use post in /scheme endpoint passing": "Para criar um esquema, use a postagem no terminal / esquema passando",
+        "and": "e",
+        "in the": "no",
+        "object, and the Splitmaster Token in the": "objeto, e o Splitmaster Token no",
+        "using": "using",
+        "as shown in the Postman Documentation": "como mostrado na documentação do Postman.",
+        "tools": "Ferramentas",
+        "Tools are functions that will operate automatically after the": "Ferramentas são funções que funcionarão automaticamente após o",
+        "receive an amount higher than the minimum payout": "receber um valor superior ao pagamento mínimo.",
+        "After the node type split been added, after his father node (always a": "Após a adição do tipo de nó, após o nó pai (sempre um",
+        "node or an": "nó ou um",
+        "node)": "nó)",
+        "it will divide with all his": "ele dividirá com todos os seus childrens todo bitcoin no saldo do pai, proporcionalmente às porcentagens passadas.",
+        "The process of split, will try to find the ": "O processo de divisão, tentará encontrar o ",
+        "and the": "e o",
+        "of his childrens with type": "de suas crianças com tipo",
+        "It is recommend that the": "Recomenda-se que o",
+        "is set to 100% in the sum of all childrens type": "é definido como 100% na soma de todos os tipos childrens",
+        "therefore": "Portanto, usamos uma função de nomalização, se a soma das porcentagens não for 100%, usamos uma <regra de três> para fornecer a quantidade proporcional. Um exemplo simples: o endereço A possui 25% e o endereço B possui 25%; portanto, na <regra de três>, ambos terão 50%, fechando 100% no final.",
+        "Timer": "Timer",
+        "The Tool Timer is used to": "O temporizador da ferramenta é usado para agendar uma operação no futuro. Requer o ",
+        "object with": "objeto com",
+        "fields in the": "campos no",
+        "object Theses values": "objeto. Esses valores serão adicionados ao tempo em que o nó for processado. Um exemplo simples, se a data for 01/01/2020 07:00:00 e a data",
+        "is equal to": "é igual a",
+        "then the next node will execute at 01/01/2020 08:00:00": "o próximo nó será executado em 01/01/2020 08:00:00.",
+        "The only children node available is the split": "O único nó children disponível é a divisão.",
+        "The Tool Swap is experimental, needs CDA": "A troca de ferramentas é experimental, precisa da conta CDA registrada no Splitmaster para obter o token e o splitmaster",
+        "to create the scheme with it": "para criar o esquema com ele. Em segundo plano, salvamos sua conta CDA para gerar o CDA Token e o Splitmaster Token, que será usado quando a API Splitmaster chamar o CDA API Endpoint / trade, para criar a solicitação de troca, convertendo todo bitcoin acima de 0,01 BTC para BRL (Reais).",
+        "The only children available is notify": "Os únicos childrens disponíveis são notify.",
+        "Event": "Event",
+        "The Tool Event is used to execute the next": "O Tool Event é usado para executar o próximo nó após o preço do Bitcoin atingir um preço específico. Requer os campos",
+        "object of event node A simple example": " objeto do nó do evento. Um exemplo simples, se o usuário selecionar ",
+        "equal to US$ 8,00000, and the": " igual a US $ 8.000,00, ea ",
+        "When the node is processed, it will create": "Quando o nó é processado, ele cria uma tarefa no plano de fundo do Splitmaster, verificando o preço a cada 10 minutos, até que o preço esteja acima do preço selecionado e, em seguida, o próximo nó será executado.",
+        "The only available childrens are": "As únicas crianças disponíveis são",
+        "Notify": "Notify",
+        "The Tool Notify is used to send an email after the node is executed Whether": "A ferramenta Notificar é usada para enviar um email após a execução do nó. Seja",
+        "or": "ou",
+        "It requires the": "Requer o",
+        "node": "node",
+        "No available childrens": "Não há childrens disponíveis.",
+        "The": "The",
+        "is where everything happens, the": "é onde tudo acontece, o primeiro nó do esquema do usuário, onde estão childrens de childrens de childrens (...), e ele tem o",
+        "of the node, so it can receive BTC any moment, has": "do nó, para que ele possa receber o BTC a qualquer momento,",
+        "equal to": "igual a",
+        "where the next node will be located": "onde o próximo nó estará localizado.",
+        "node is used after the": "nó é usado após o",
+        "node, where all bitcoin's father will be": "nó, onde todo o pai do bitcoin será dividido. Pode receber childrens do tipo",
+        "It has the": "Tem o",
+        "object": "objeto",
+        "If the user let the": "Se o usuário deixar o",
+        "field equal to": "campo igual a",
+        "(None), the Splitmaster API will generate a new": "(Nenhum), a API Splitmaster gerará um novo endereço para o nó. Mas se o usuário adicionar um endereço existente, não será possível processar nenhum outro nó depois dele, portanto, será o fim da árvore para esse nó..",
+        "Clearing all said, the valid children type": "Clarificando tudo dito, o tipo de childrens válido para cada tipo de pai é mostrado na ilustração abaixo.",
+        "All fields required in the": "Todos os campos necessários no",
+        "object, is shown below": "objeto, é mostrado abaixo.",
+        "Any other question about the API": "Qualquer outra pergunta sobre a API pode ser encontrada na documentação do Postman"
     }
 }
