--- a/src/i18n/locales/pt/translation.json
+++ b/src/i18n/locales/pt/translation.json
@@ -30,9 +30,20 @@
         "payout": "Payout",
         "lastTransaction": "Ultima transação"
     },
+    "mySchemes": {
+        "title": "Meus Splits",
+        "subTitle": "e Esquemas",
+        "newScheme": "Novo esquema",
+        "balance": "Balanço",
+        "lastTransaction": "Última transação",
+        "Create new scheme": "Criar novo esquema",
+        "schemeName": "Nome do Esquema",
+        "visibility": "Visibilidade",
+        "create": "Criar"
+    },
     "errors": {
-        "emailcantbeempty": "Email can't be empty",
-        "namecantbeempty": "Name can't be empty",
+        "emailcantbeempty": "Email não pode estar em branco",
+        "namecantbeempty": "Nome não pode estar em branco",
         "valuecantbezero": "Valor não pode ser zero"
     },
     "root": {
